<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity"
        >


    <ImageView
            android:id="@+id/movie_pic"
            tools:src="@drawable/avengers"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/movie_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
           />

        <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/avengers_gradient"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/movie_pic" android:id="@+id/view"/>

        <Button
                android:id="@+id/back_btn"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/movie_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text"
                android:textColor="@color/grey"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/ic__left_black_24dp"
                android:background="@android:color/transparent"
                android:minHeight="21dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/age_limit"
                style="@style/DetailMoviesText"
                tools:text="@string/movie_age"
                android:textSize="@dimen/small_text"
                android:background="@drawable/background_age_limit"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/name"/>


        <TextView
                android:id="@+id/name"
                style="@style/DetailMoviesText"
                tools:text="@string/movie_name"
                android:textSize="@dimen/extra_large_text"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@id/movie_pic"
        />

    <TextView
            android:id="@+id/genre"
            style="@style/DetailMoviesText"
            tools:text="@string/movie_genre"
            android:textColor="@color/crimson"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:theme="@style/MovieRatingBar"
            android:progressTint="@color/colorStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:numStars="5"
            tools:rating="4"
            app:layout_constraintEnd_toStartOf="@+id/reviews"
            app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
            android:id="@+id/reviews"
            style="@style/DetailMoviesText"
            tools:text="@string/movie_reviews"
            android:textColor="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"/>

    <TextView
            android:id="@+id/story"
            style="@style/DetailMoviesText"
            android:text="@string/movie_storyline"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/reviews"/>

    <TextView
            android:id="@+id/description"
            style="@style/DetailMoviesText"
            tools:text="@string/movie_description"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/story"/>

        <TextView
                android:id="@+id/cast"
                style="@style/DetailMoviesText"
                android:text="@string/movie_cast"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/actors_list"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actors_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="11dp"
                >
        </androidx.recyclerview.widget.RecyclerView>



    </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
