<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity"
        >


    <ImageView
            android:id="@+id/movie_pic"
            android:src="@drawable/avengers"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"/>

        <View
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:background="@drawable/avengers_gradient"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toTopOf="@+id/guideline2"/>

        <Button
                android:id="@+id/back_btn"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/movie_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text"
                android:textColor="@color/grey"
                android:textAllCaps="false"
                android:drawableLeft="@drawable/ic__left_black_24dp"
                android:background="@android:color/transparent"
                android:minHeight="21dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/age_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_age"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline2"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.30"/>

    <TextView
            android:id="@+id/name"
            android:text="@string/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:textSize="40sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline2"/>

    <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_genre"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/crimson"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:theme="@style/MovieRatingBar"
            android:progressTint="@color/colorStars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:numStars="5"
            android:rating="4"
            app:layout_constraintEnd_toStartOf="@+id/reviews"
            app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_reviews"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/grey"
            app:layout_constraintTop_toBottomOf="@+id/genre"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar"/>

    <TextView
            android:id="@+id/story"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_storyline"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/reviews"/>

    <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/movie_description"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/story"/>

        <TextView
                android:id="@+id/cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_cast"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/description"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/Evans"/>

        <ImageView
                android:id="@+id/Evans"
                android:src="@drawable/ic_chris_evans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/Ruffalo"
                app:layout_constraintStart_toEndOf="@+id/Robert"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                android:layout_marginStart="8dp"/>
        <ImageView
                android:id="@+id/Hemsworth"
                android:src="@drawable/ic_chris_hemsworth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/Ruffalo"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"/>
        <ImageView
                android:id="@+id/Ruffalo"
                android:src="@drawable/ic_mark_ruffalo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/Evans"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/Hemsworth"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:layout_marginStart="8dp"/>
        <ImageView
                android:id="@+id/Robert"
                android:src="@drawable/ic_robert_downey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/Evans"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/cast"
                app:layout_constraintHorizontal_chainStyle="spread"/>
        <TextView
                android:id="@+id/textRobert"
                android:text="@string/movie_robert"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/white"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/Robert"
                app:layout_constraintTop_toBottomOf="@+id/Robert"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="@+id/Robert"/>


        <TextView
                android:id="@+id/text_Chris"
                android:text="@string/movie_chris"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/white"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/Evans"
                app:layout_constraintStart_toStartOf="@+id/Evans"
                app:layout_constraintEnd_toEndOf="@+id/Evans"/>

        <TextView
                android:id="@+id/text_Mark"
                android:text="@string/movie_mark"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/white"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/Ruffalo"
                app:layout_constraintStart_toStartOf="@+id/Ruffalo"
                app:layout_constraintEnd_toEndOf="@+id/Ruffalo"/>

        <TextView
                android:id="@+id/text_Hemswoth"
                android:text="@string/movie_hems"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintHorizontal_bias="0.5"
                android:layout_marginBottom="55dp"
                app:layout_constraintEnd_toEndOf="@+id/Hemsworth"
                app:layout_constraintTop_toBottomOf="@+id/Hemsworth"
                app:layout_constraintStart_toStartOf="@+id/Hemsworth"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
