<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/cardMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:cardPreventCornerOverlap="false"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginStart="14dp"
        app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/item_radial_gardient">

        <ImageView
                android:id="@+id/movie_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:src="@drawable/background_list_movie"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
        </ImageView>

        <TextView
                android:id="@+id/movie_age"
                style="@style/DetailMoviesText"
                tools:text="@string/movie_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_age_limit"
                app:layout_constraintStart_toStartOf="@+id/movie_image"
                android:layout_marginStart="6dp"
                app:layout_constraintTop_toTopOf="@+id/movie_image"
                android:layout_marginTop="12dp"
                />

        <ImageView
                android:id="@+id/movie_favorites"
                tools:src="@drawable/ic_like"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="@+id/movie_image"
                app:layout_constraintEnd_toEndOf="@+id/movie_image"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="13dp"/>

        <RatingBar
                android:id="@+id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:progressTint="@color/crimson"
                tools:rating="5"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/movie_image"
                app:layout_constraintStart_toStartOf="@+id/movie_image"
                android:layout_marginStart="6dp"/>

        <TextView
                android:id="@+id/review"
                style="@style/DetailMoviesText"
                tools:text="@string/movie_reviews"
                android:textColor="@color/grey"
                android:textSize="@dimen/extra_small_text"
                app:layout_constraintStart_toEndOf="@+id/movie_rating"
                app:layout_constraintBottom_toBottomOf="@+id/movie_rating"
                app:layout_constraintTop_toTopOf="@+id/movie_rating"
                app:layout_constraintEnd_toEndOf="@id/movie_image"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/genre"
                style="@style/DetailMoviesText"
                tools:text="@string/movie_genre"
                android:textColor="@color/crimson"
                android:textSize="@dimen/extra_small_text"
                android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toTopOf="@+id/movie_rating"
                app:layout_constraintStart_toStartOf="@+id/movie_image"
                android:layout_marginStart="6dp"
                app:layout_constraintEnd_toEndOf="@id/movie_image"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                style="@style/DetailMoviesText"
                android:id="@+id/movie_name"
                tools:text="@string/movie_name"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/movie_rating"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
                android:id="@+id/movie_min"
                style="@style/DetailMoviesText"
                tools:text="@string/movie_time"
                android:textSize="@dimen/extra_small_text"
                android:textColor="@color/grey2"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@+id/movie_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>